--- a/edit.html
+++ b/edit.html
@@ -85,8 +85,14 @@
 		</div>
 	</div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-primary" onclick="okModalUpdate('sss')">SSSで提案</button>
-		<button type="button" class="btn btn-primary" onclick="okModalUpdate('alice')">aLiceで提案</button>
+		<button type="button" class="btn btn-primary" onclick="okModalUpdate('sss')">
+			SSSで提案
+			<span id="spinner_update_sss" class="collapse spinner-border spinner-border-sm" role="status"></span>
+		</button>
+		<button type="button" class="btn btn-primary" onclick="okModalUpdate('alice')">
+			aLiceで提案
+			<span id="spinner_update_alice" class="collapse spinner-border spinner-border-sm" role="status"></span>
+		</button>
 		<button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
 	</div><!-- /.modal-footer -->
 </div></div><!-- /.modal-content --><!-- /.modal-dialog -->
@@ -112,8 +118,14 @@
 		</div>
 	</div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-primary" onclick="okModalAppend('sss')">SSSで提案</button>
-		<button type="button" class="btn btn-primary" onclick="okModalAppend('alice')">aLiceで提案</button>
+		<button type="button" class="btn btn-primary" onclick="okModalAppend('sss')">
+			SSSで提案
+			<span id="spinner_append_sss" class="collapse spinner-border spinner-border-sm" role="status"></span>
+		</button>
+		<button type="button" class="btn btn-primary" onclick="okModalAppend('alice')">
+			aLiceで提案
+			<span id="spinner_append_alice" class="collapse spinner-border spinner-border-sm" role="status"></span>
+		</button>
 		<button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
 	</div><!-- /.modal-footer -->
 </div></div><!-- /.modal-content --><!-- /.modal-dialog -->
@@ -141,15 +153,27 @@
 	</div>
 	<div class="modal-footer">
 		<label><b>賛成</b><br></label>
-		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_agree','sss')">SSSで賛成</button>
-		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_agree','alice')">aLiceで賛成</button>
+		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_agree','sss')">
+			<span id="spinner_agree_sss" class="collapse spinner-border spinner-border-sm" role="status"></span>
+			SSSで賛成
+		</button>
+		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_agree','alice')">
+			<span id="spinner_agree_alice" class="collapse spinner-border spinner-border-sm" role="status"></span>
+			aLiceで賛成
+		</button>
 		
 	</div><!-- /.modal-footer -->
 	<div class="modal-footer">
 		<label><b>反対</b><br></label>
 
-		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_disagree','sss')">SSSで反対</button>
-		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_disagree','alice')">aLiceで反対</button>
+		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_disagree','sss')">
+			<span id="spinner_disagree_sss" class="collapse spinner-border spinner-border-sm" role="status"></span>
+			SSSで反対
+		</button>
+		<button type="button" class="btn btn-primary" onclick="okModalvote('modal_vote_disagree','alice')">
+			<span id="spinner_disagree_alice" class="collapse spinner-border spinner-border-sm" role="status"></span>
+			aLiceで反対
+		</button>
 	</div><!-- /.modal-footer -->
 	<div class="modal-footer">
 		
@@ -179,8 +203,14 @@
 		</div>
 	</div>
 	<div class="modal-footer">
-		<button type="button" class="btn btn-primary" onclick="okModalDecision('sss')">SSSで議決</button>
-		<button type="button" class="btn btn-primary" onclick="okModalDecision('alice')">aLiceで議決</button>
+		<button type="button" class="btn btn-primary" onclick="okModalDecision('sss')">
+			<span id="spinner_decision_sss" class="collapse spinner-border spinner-border-sm" role="status"></span>
+			SSSで議決
+		</button>
+		<button type="button" class="btn btn-primary" onclick="okModalDecision('alice')">
+			<span id="spinner_decision_alice" class="collapse spinner-border spinner-border-sm" role="status"></span>
+			aLiceで議決
+		</button>
 		<button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
 	</div><!-- /.modal-footer -->
 </div></div><!-- /.modal-content --><!-- /.modal-dialog -->
@@ -282,7 +312,21 @@ startSymbolApplication(
 	async function(event     ){
 		console.log(event);
 		if(event.topic.indexOf("confirmed") === 0){
-
+			$('#spinner_agree_sss').collapse('hide');
+			$('#spinner_agree_alice').collapse('hide');
+			$('#spinner_disagree_sss').collapse('hide');
+			$('#spinner_disagree_alice').collapse('hide');
+			$('#spinner_decision_sss').collapse('hide');
+			$('#spinner_decision_alice').collapse('hide');				
+			$('#spinner_update_sss').collapse('hide');
+			$('#spinner_update_alice').collapse('hide');				
+			$('#spinner_append_sss').collapse('hide');
+			$('#spinner_append_alice').collapse('hide');				
+			$("#modal_vote").modal("hide");
+			$("#modal_decision").modal("hide");
+			$("#modal_update").modal("hide");
+			$("#modal_append").modal("hide");
+			
 			alert("提案先アカウントの状態に更新がありました。リロードしてください。")
 		} 
 	},	//onSocketMessage ソケット受信時
@@ -680,8 +724,21 @@ function okModalvote(id,walletType){
 		callback
 	);
 
-	$("#modal_vote").modal("hide");
+	if(walletType === "sss"){
+		if(id.indexOf("disagree")>=0){
+			$('#spinner_disagree_sss').collapse('show');
+		}else{
+			$('#spinner_agree_sss').collapse('show');
+		}
+	}else{
+		if(id.indexOf("disagree")>=0){
 
+			$('#spinner_disagree_alice').collapse('show');	
+		}else{
+
+			$('#spinner_agree_alice').collapse('show');
+		}
+	}
 }
 
 function okModalDecision(walletType){
@@ -695,7 +752,13 @@ function okModalDecision(walletType){
 		sym.PlainMessage.create(hash),
 		callback
 	);
-	$("#modal_decision").modal("hide");
+	if(walletType === "sss"){
+		$('#spinner_decision_sss').collapse('show');
+	}else{
+
+		$('#spinner_decision_alice').collapse('show');	
+	}
+//	$("#modal_decision").modal("hide");
 
 }
 
@@ -705,7 +768,13 @@ function okModalUpdate(walletType){
 	const updateDocument = buildDocument("modal_update_textarea");
 	const callback = getWalletCallback(walletType);
 	putTransaction(nextAddress.textContent,[],sym.PlainMessage.create(updateDocument),callback);
-	$("#modal_update").modal("hide");
+	if(walletType === "sss"){
+		$('#spinner_update_sss').collapse('show');
+	}else{
+
+		$('#spinner_update_alice').collapse('show');	
+	}
+	//	$("#modal_update").modal("hide");
 }
 
 function okModalAppend(walletType){
@@ -714,7 +783,13 @@ function okModalAppend(walletType){
 	const nextAddress = document.getElementById("modal_append_next");
 	const appendDocument = buildDocument("modal_append_textarea");
 	putTransaction(nextAddress.textContent,[],sym.PlainMessage.create(appendDocument),callback);
-	$("#modal_append").modal("hide");
+//	$("#modal_append").modal("hide");
+if(walletType === "sss"){
+		$('#spinner_append_sss').collapse('show');
+	}else{
+
+		$('#spinner_append_alice').collapse('show');	
+	}
 }
 
 
