--- a/index.html
+++ b/index.html
@@ -3,30 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-toast-plugin/1.3.2/jquery.toast.min.css" integrity="sha512-wJgJNTBBkLit7ymC6vvzM1EcSWeM9mmOu+1USHaRBbHkm6W9EgM0HY27+UtUaprntaYQJF75rc8gjxllKs5OIQ==" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style>
-.jq-toast-wrap {
-    width:250px;
-}
 
-.div-list {
-	list-style-type: disc; /* リストアイテムのマーカーを設定 */
-	margin: 0; /* マージンをリセット */
-	padding: 0; /* パディングをリセット */
-}
-
-.chapter {
-	border: 1px solid #ff0000;
-	box-sizing: border-box;
-	margin: 1px;
-	display: list-item; /* リストアイテムとして表示 */
-	margin-left: 1.4em; /* 左マージンを設定して、マーカーの位置を調整 */
-}
-
-.indented {
-    padding-left: 20px;
-}
 </style>
 </head>
 
@@ -34,10 +13,47 @@
 
 <div class="container">
 <h1>みんなの憲章(Our Charter)</h1>
-<h2>Demo</h2>
-<h2>Sample</h2>
+
+<br>
+<h2>概要 Abstruct</h2>
+
+誰もが異議申し立ての提案が可能で、投票によってのみ修正可能なフルオンチェーンデータ編集ツールです。
+高いセキュリティによる保護を必要とする憲章や法律、契約条件の提示にも応用できる掲示板を開発しました。
+
+ブロックチェーンの高い透明性を活用することで、ルールメーカーへの権力集中を極力減らし、
+分散型での熟議民主主義の実現を可能にする提案です。
+
+<br><br>
+<h2>デモ Demo</h2>
+
+テストネットのXYMで投票・議決できます。自由にお試しください（たまにリセットします）<br>
+You can vote and make decisions on the XYM testnet. Feel free to try it out (I reset it occasionally).
+
+<li><a href="https://kicnft.github.io/minken/edit.html?vote_id=72C0212E67A08BCE&confirm_id=72C0212E67A08BCE&tx_id=E9F9A6A009EE94B93A7343B7A5F6CBD75DE830E9C832D96351C9B3519AEF5C51">ドラフト修正ページ</a></li>
+<li><a href="https://kicnft.github.io/minken/view.html?vote_id=72C0212E67A08BCE&confirm_id=72C0212E67A08BCE&tx_id=E9F9A6A009EE94B93A7343B7A5F6CBD75DE830E9C832D96351C9B3519AEF5C51">発行ページ</a></li>
+
+<br>
+<h5>操作方法</h5>
+- 改善提案
+- 投票
+
+履歴
+
+<br><br>
+<h2>展開例 Sample</h2>
+
+展開例を提示します。
+テストネットのXYMで投票・議決できます。自由にお試しください（たまにリセットします）<br>
+You can vote and make decisions on the XYM testnet. Feel free to try it out (I reset it occasionally).
+
+
 <li>ロボット三原則</li>
+<li>DAO規約</li>
+<li>避難所コミュニティ規約</li>
+<li>分配プログラム</li>
+
 </div>
+
 <script>
 
 </script>
