--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <br>
 <h2>概要 Abstruct</h2>
 
-誰もが異議申し立ての提案が可能で、投票によってのみ修正可能なフルオンチェーンデータ編集ツールです。
-高いセキュリティによる保護を必要とする憲章や法律、契約条件の提示にも応用できる掲示板を開発しました。
+誰もが提案可能で、投票によってのみ修正可能なフルオンチェーンデータ編集ツールです。
+高いセキュリティによる保護を必要とする法律や規約、契約条件の提示やコード共有にも応用できる掲示板を開発しました。
 
 ブロックチェーンの高い透明性を活用することで、ルールメーカーへの権力集中を極力減らし、
 分散型での熟議民主主義の実現を可能にする提案です。
