--- a/edit.html
+++ b/edit.html
@@ -56,7 +56,7 @@
 <ul id="history"></ul>
 <hr>
 <h4>QRs</h4>
-<h5>ドラフト版 <a id="qr_link_draft" href="">Draft Page</a></h5>
+<h5>ドラフト版 Draft Page(このページ)</h5>
 <div id="qr_draft"></div>
 <br>
 <h5>発行版 <a id="qr_link_publish" href="">Publish Page</a></h5>
@@ -289,7 +289,6 @@ startSymbolApplication(
 			text: location.href,
 			width: 256, height: 256
 		});
-		document.getElementById("qr_link_draft").href = location.href;
 
 		const qrPublish = new QRCode(document.getElementById('qr_publish'), {
 			text: `https://${location.host}/minken/view.html${location.search}`,
