--- a/edit.html
+++ b/edit.html
@@ -223,7 +223,7 @@
 </div><!-- /.modal -->
 
 <script>
-const CONFIRMED_TOKEN_ID = "54F9D50A6D73E426"; //票決トークン
+const CONFIRMED_TOKEN_ID = "54F9D50A6D73E426"; //議決トークン
 const VOTE_TOKEN_ID = "55CEF6ACA47C09BC"; //投票トークン
 const INIT_DOCUMENT_ID = "338DCC41E690DB6A7932393B32149872D534603A9D49CD6E4F64111E98BAF21B"; //初期ドキュメント
 
