--- a/view.html
+++ b/view.html
@@ -91,10 +91,10 @@ startSymbolApplication(
 
 		//QRコード
 		const qrcode = new QRCode(document.getElementById('qr_draft'), {
-			text: `https://${location.host}/minken/edit.html${location.search}`,
+			text: `https://${location.host}/edit.html${location.search}`,
 			width: 256, height: 256
 		});
-		document.getElementById("qr_link_draft").href = `https://${location.host}/minken/edit.html${location.search}`;
+		document.getElementById("qr_link_draft").href = `https://${location.host}/edit.html${location.search}`;
 
 		const qrPublish = new QRCode(document.getElementById('qr_publish'), {
 			text: location.href,
